--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                 <nav class="menu-links">
                     <ul>
                         <li><a href="">Leaderboards</a></li>
-                        <li><a href="">Team balancing</a></li>
+                        <li><a href="">Team balancer</a></li>
                     </ul>
                 </nav>
             </div>
