--- a/app/balancer/templates/balancer/balancer-input.html
+++ b/app/balancer/templates/balancer/balancer-input.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block page_styles %}
-{#    <link rel="stylesheet" href="{% static 'games/css/base.css' %}">#}
+    <link href="{% static 'balancer/css/balancer-result.css' %}" rel="stylesheet">
 {% endblock page_styles %}
 
 {% block content %}
@@ -10,63 +10,64 @@
 <div class="page-overview">
     <div class="page-overview-primary">
         <div class="page-overview-title">
-            <h1> Team balancing</h1>
+            <h1>
+                Team balancer
+            </h1>
         </div>
     </div>
 </div>
 
-
 <section>
-<article>
+    <header>
+        <a> Add players </a>
+    </header>
+    <article class="col-xs-5">
+        <form action="{% url 'balancer:balancer-input' %}" method="post">
+            {% csrf_token %}
 
-    <form action="{% url 'balancer:balancer-input' %}" method="post">
-        {% csrf_token %}
-
-        <table>
-            <thead>
-                <tr>
-                    <td>Player</td>
-                    <td>MMR</td>
-                </tr>
-            </thead>
-
-            <tbody>
-                {% for field in form %}
-                    {% cycle 'True' 'False' as odd silent %}
-
-                    {% if odd == 'True' %}
+            <div class="table-responsive">
+                <table class="table table-borderless  ">
+                    <thead>
                         <tr>
-                    {% endif %}
-
-                    <td>
-                        <div class="fieldWrapper">
-                            {{ field.errors }}
-                            {{ field }}
-                            {% if field.help_text %}
-                                <p class="help">{{ field.help_text|safe }}</p>
-                            {% endif %}
-                        </div>
-                    </td>
-
-                    {% if odd == 'False' %}
+                            <th class="col-xs-7">Player</th>
+                            <th class="col-xs-5">MMR</th>
                         </tr>
-                    {% endif %}
-                {% endfor %}
-            </tbody>
-        </table>
+                    </thead>
 
-        <br><br>
-        <input type="submit" value="Balance" />
-    </form>
+                    <tbody>
+                        {% for field in form %}
+                            {% cycle 'True' 'False' as odd silent %}
 
-    {% if form.non_field_errors %}
-        <br><br>
-        Errors:
-        {{ form.non_field_errors }}
-    {% endif %}
+                            {% if odd == 'True' %}
+                                <tr>
+                            {% endif %}
 
-</article>
+                            <td>
+                                <div class="field-wrapper">
+                                    {{ field.errors }}
+                                    {{ field }}
+                                    {% if field.help_text %}
+                                        <p class="help">{{ field.help_text|safe }}</p>
+                                    {% endif %}
+                                </div>
+                            </td>
+
+                            {% if odd == 'False' %}
+                                </tr>
+                            {% endif %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <input type="submit" value="Balance"/>
+        </form>
+
+        {% if form.non_field_errors %}
+            <br><br>
+            Errors:
+            {{ form.non_field_errors }}
+        {% endif %}
+    </article>
 </section>
-
 {% endblock %}
 
