--- a/app/balancer/templates/balancer/balancer-input.html
+++ b/app/balancer/templates/balancer/balancer-input.html
@@ -43,7 +43,7 @@
                     </tbody>
                 </table>
             </div>
-            <input type="submit" value="Balance"/>
+            <input type="submit" value="Balance" class="button"/>
         </form>
 
         {#  form errors #}
