--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -70,6 +70,44 @@ ol, ul {
     color: #ED3B1C;
 }
 
+.page-menu {
+    position: relative;
+    margin: 0 0 6px 0;
+}
+
+.page-menu .menu-links {
+    background: #2a323a;
+    display: block;
+}
+
+.page-menu .menu-links ul {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+.page-menu .menu-links ul li {
+    display: inline-block;
+}
+
+.page-menu .menu-links ul li a {
+    display: block;
+    border-bottom: 2px solid transparent;
+    color: #C4C4C4;
+    padding: 8px 8px;
+}
+
+.page-menu .menu-links ul li.active a {
+    background: #252d34;
+    color: white;
+    border-bottom: 2px solid #ED3B1C;
+}
+
+.page-menu .menu-links ul li a:hover {
+    background: #252d34;
+    color: white;
+}
+
 div.footer-nav {
     float: right;
     margin: 18px 0 0 0;
