--- a/app/balancer/templates/balancer/balancer-result.html
+++ b/app/balancer/templates/balancer/balancer-result.html
@@ -28,19 +28,19 @@
 
      <div class="mmr-diff">
         Difference:
-        {% if result.mmr_diff == 0 %}
+        {% if answer.mmr_diff == 0 %}
             <span class="draw">
-        {% elif result.teams.0.mmr > result.teams.1.mmr %}
+        {% elif answer.teams.0.mmr > answer.teams.1.mmr %}
             <span class="team1">
         {% else %}
             <span class="team2">
         {% endif %}
-            {{ result.mmr_diff }} MMR
+            {{ answer.mmr_diff }} MMR
         </span>
     </div>
 
     <div class="row">
-    {% for team in result.teams %}
+    {% for team in answer.teams %}
         <div class="col-md-6">
             <section class="balancer-result team{{ forloop.counter }}">
                 <header>
@@ -73,6 +73,9 @@
                         </table>
                     </div>
                 </article>
+                <footer>
+                    <a href="{% url 'balancer:match-create' result.id pagination.number|add:-1 forloop.counter0 %}"> Record victory! </a>
+                </footer>
             </section>
         </div>
     {% endfor %}
@@ -80,7 +83,7 @@
 
     {# text result for clipboard copy #}
     <div id="clipboard">
-        {% for team in result.teams %}
+        {% for team in answer.teams %}
             <p>Team {{ forloop.counter }} (Avg. {{ team.mmr }}) </p>
             <br>
 
@@ -92,7 +95,7 @@
             <br>
         {% endfor %}
 
-        MMR difference: {{ result.mmr_diff }}
+        MMR difference: {{ answer.mmr_diff }}
         <br><br>
         url: {{ request.build_absolute_uri }}
     </div>
