--- a/app/balancer/templates/balancer/balancer-result.html
+++ b/app/balancer/templates/balancer/balancer-result.html
@@ -75,17 +75,16 @@
                 </article>
 
                 {# buttons to record victory #}
-                {% if perms.ladder.add_match %}
-                    <footer>
-                        {% if not match %}
-                            {% url 'balancer:match-create' result.id pagination.number|add:-1 forloop.counter0 as url%}
+                <footer>
+                    {% if not answer.match %}
+                        {% if perms.ladder.add_match %}
+                            {% url 'balancer:match-create' answer.id forloop.counter0 as url%}
                             <a class="button team{{ forloop.counter }}" href="{{ url }}"> Record victory! </a>
-                        {% elif match.winner == forloop.counter0 %}
-                            <a class="button already-done team{{ forloop.counter }}"> Victory recorded! </a>
                         {% endif %}
-                    </footer>
-                {% endif %}
-
+                    {% elif answer.match.winner == forloop.counter0 %}
+                        <a class="button already-done team{{ forloop.counter }}"> Victory recorded! </a>
+                    {% endif %}
+                </footer>
             </section>
         </div>
     {% endfor %}
