--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block page_scripts %}
-{#    <script src="{% static 'ladder/js/base.js' %}"></script>#}
+    <script src="{% static 'ladder/js/ladder.js' %}"></script>
 {% endblock page_scripts %}
 
 {% block page_styles %}
@@ -36,19 +36,27 @@
             </thead>
             <tbody>
             {% for player in player_list %}
+                {% url 'ladder:player-overview' player.name as player_url %}
+
                 <tr class="player_row">
                     <td class="cell-centered">
                         {{ player.rank }}
                     </td>
                     <td>
                         <div class="avatar">
-                            <a href="">
+                            <a href="{{ player_url }}">
                                 <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/60/6009ebd5640bed7c75004558733d63493ff2eaf8_full.jpg">
                             </a>
                         </div>
-                        <a href=""> {{ player.name }} </a>
+                        <a href="{{ player_url }}"> {{ player.name }} </a>
                         <div class="subtext">
-                            {{ player.last_played }} 10 hours ago
+                            {% with player.matchplayer_set.last.match.date as last_played %}
+                                <time class="timeago"
+                                      datetime="{{ last_played|date:'c' }}"
+                                      title="{{ last_played }}">
+                                    {{ last_played|date:'c'|default:'-' }}
+                                </time>
+                            {% endwith %}
                         </div>
                     </td>
                     <td>
